# mgtu-code

./: 01_calculate_arithmetics.c  01_calculate_arithmetics.h  02_text_counter.c  02_text_counter.h  03_threads_philosophers.c  03_threads_philosophers.h  04_abstract_dictionary.c  04_abstract_dictionary.h  05_Date_and_Time.c  06_rational_numbers.c  06_rational_numbers.h  07_Polynomial.c  07_Polynomial.h  08_Weather_Sensors_and_Charts.c  09_Abstract_Stack.c  10_Matrix_Determinants_and_Cramer.c  10_matrix_determinants_and_cramer.h  12_binary_search_tree.c  12_binary_search_tree.h  13_gfx.c  CMakeLists.txt  Hydra-L.csv  LICENSE  Oporniy_barometer-1.csv  Pascal-1.csv  README.md  Rosa-1.csv  Rosa-2.csv  main.c  task.c  task.h
